fixes #2681 add proc:full to schema-gneration in pom.xml